# raspberry-noaa-v2

./: .gitattributes  .gitignore  .noaa.conf  HARDWARE.md  INSTALL.md  METEOR.md  README.md  TODO  WEBPANEL.md  WORKING.md  check.sh  common.sh  fstab  index.html  install.sh  install_MeteorDemod.sh  install_and_upgrade.sh  migrate_data.sh  nginx.cfg  noaa.conf  panel.sql  post.py  predict.qth  prune.sh  receive.sh  receive_iss.sh  receive_meteor.sh  rectify.py  requirements.txt  schedule.sh  schedule_iss.sh  schedule_meteor.sh  schedule_sat.sh  sun.py  support.sh  test_reception.sh  update_webpanel.sh  wpa_supplicant.conf
.github/ISSUE_TEMPLATE/: enhancement.md  error.md
ansible/: core.yml  hosts  remote-desktop.yml  site.yml  webserver.yml
ansible/group_vars/: all.yml
ansible/templates/: base_station.yml.j2  webserver.yml.j2
config/: settings.backup  settings.yml  settings.yml.sample  settings_schema.json
db_migrations/: 00_seed_schema.sql  01_add_spectrogram_bool.sql  02_add_noaa_pristine_bool.sql  03_add_pass_azimuth_direction.sql  04_add_capture_gain.sql  05_add_pass_azimuth_at_max.sql  06_add_polar_az_el_bool.sql  07_add_histogram_bool.sql  07_add_polar_direction_bool.sql  08_add_histogram_bool.sql  09_add_at_job_id.sql  10_add_configuration_table.sql  seed_schema.sql  update_database.sh
docs/: HARDWARE.md  INSTALL.md  ISS.md  METEOR.md  WEBPANEL.md  WORKING.md  annotation.md  auto_post_to_twitter.md  db_backups.md  discord_push.md  emailing.md  facebook_push.md  hardware.md  instagram_push.md  iss.md  matrix_push.md  meteor.md  migrate_from_raspberry_noaa.md  pruning.md  setting_sdr_source_id.md  tls_webserver.md  troubleshooting.md  troubleshooting_long.md  twitter_push.md  webpanel_screenshots.md  wxtoimg-processing-options.md
migrations/: 20201292-iss.sh
modprobe.d/: rtlsdr.conf
scripts/: common.sh  demod.py  false  prune.sh  receive.sh  receive_elektro.sh  receive_iss.sh  receive_meteor.sh  receive_meteordemod.sh  receive_noaa.sh  rtlsdr_m2_lrpt_rx.py  schedule.sh  schedule_captures.sh  schedule_iss.sh  schedule_meteor.sh  schedule_sat.sh  select_best_overlapping_passes.py  sun.py  test_reception.sh  utils.py
scripts/audio_processors/: FM_baseband_demodulator.grc  FM_baseband_demodulator.py  README.md  airspy_mini_m2_lrpt_rx-nogui.grc  airspy_mini_m2_lrpt_rx.py  false  (+26 more)
software/: Build_Satdump_v1.2.1-397f9ed6_bookworm_64-bit_amd64.txt  Meteordemod-2.0.0-Linux.deb  SDRplay_RSP_API-Linux-3.07.1.run  medet_arm  medet_x64  predict_2.2.3-4-b2_amd64.deb  predict_2.2.5+dfsg.1-1_arm64.deb  predict_2.2.5+dfsg.1-1_armhf.deb  rtlsdr_m2_lrpt_rx-qt.grc  sdrplay_api_install.sh  settings.ini
software/MeteorDemod/: CMakeLists.txt  LICENSE  MeteorDemod.pro  main.cpp  readme.md
software/MeteorDemod/DSP/: agc.cpp  agc.h  filter.cpp  filter.h  iqsource.cpp  iqsource.h  meteordemodulator.cpp  meteordemodulator.h  pll.cpp  pll.h  wavreader.cpp  wavreader.h
software/MeteorDemod/GIS/: dbfilereader.cpp  dbfilereader.h  shapereader.cpp  shapereader.h  shaperenderer.cpp  shaperenderer.h
software/MeteorDemod/common/: settings.cpp  settings.h  version.h
software/MeteorDemod/decoder/: bitio.cpp  bitio.h  correlation.cpp  correlation.h  deinterleaver.cpp  deinterleaver.h  meteorimage.cpp  meteorimage.h  packetparser.cpp  packetparser.h  reedsolomon.cpp  reedsolomon.h  viterbi.cpp  viterbi.h
software/MeteorDemod/imageproc/: spreadimage.cpp  spreadimage.h  threatimage.cpp  threatimage.h
software/MeteorDemod/tools/: databuffer.cpp  databuffer.h  iniparser.cpp  iniparser.h  matrix.cpp  matrix.h  pixelgeolocationcalculator.cpp  pixelgeolocationcalculator.h  tlereader.cpp  tlereader.h  vector.h
templates/: fstab  index.html  nginx.cfg  noaa.conf  predict.qth  webpanel_schema.sql  wxtoimgrc
webpanel/: .gitignore  composer.json
(+274 files in other folders)
